Add Details section item 5

--- a/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/details.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/details.html
@@ -251,7 +251,19 @@
                             High Accuracy
                         </h3>
                         <p class="details-features__list-description">
-                            Access real-time data instantly, ensuring you're always up-to-date with the lastest information.  Whether it's market trends, user activity, or system performance metrics, stay informed with our real-time with our real-time data solutions.
+                            Access real-time data instantly, ensuring you're always up-to-date with the latest information.  Whether it's market trends, user activity, or system performance metrics, stay informed with our real-time with our real-time data solutions.
+                        </p>
+                    </div>
+                </div>
+                <!-- Item 5 -->
+                <div class="details-features__list-item">
+                    <i class="fas fa-chart-pie fa-4x"></i>
+                    <div class="details-features__list-text">
+                        <h3 class="details-features__list-title">
+                            Reporting Tools
+                        </h3>
+                        <p class="details-features__list-description">
+                            Empower your team with powerful reporting tools that provide actionable insights and in-depth analysis.  From customizable dashboards to comprehensive reports, our reporting tools make it easy to track performance, identify trends, and make informed decisions. 
                         </p>
                     </div>
                 </div>
