Add Details section complete

--- a/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/details.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch19_Leno_Website_Project/details.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <!-- BEM class naming convention (Block, Elements, and Modifiers) -->
-    <navbar class="navbar">
+    <navbar class="navbar">index.html
         <div class="navbar__container container">
             <div class="navbar__logo">
                 <img src="./images/logo.svg" alt="Leno">
@@ -21,16 +21,16 @@
             <div class="navbar__menu">
                 <ul class="navbar__menu-list">
                     <li class="navbar__menu-item">
-                        <a href="#" class="navbar__menu-link">Home</a>
+                        <a href="index.html" class="navbar__menu-link">Home</a>
                     </li>
                     <li class="navbar__menu-item">
-                        <a href="#features" class="navbar__menu-link">Features</a>
+                        <a href="index.html#features" class="navbar__menu-link">Features</a>
                     </li>
                     <li class="navbar__menu-item">
-                        <a href="#preview" class="navbar__menu-link">Preview</a>
+                        <a href="index.html#preview" class="navbar__menu-link">Preview</a>
                     </li>
                     <li class="navbar__menu-item">
-                        <a href="#details" class="navbar__menu-link">Details</a>
+                        <a href="index.html#details" class="navbar__menu-link">Details</a>
                     </li>
                     <li class="navbar__menu-item">
                         <a href="#download" class="navbar__menu-link">Download</a>
@@ -41,7 +41,7 @@
                         </a>
                     </li>
                     <li class="navbar__menu-item">
-                        <a href="#" class="navbar__menu-link--primary">
+                        <a href="index.html" class="navbar__menu-link--primary">
                             <i class="fa-brands fa-twitter"></i>
                         </a>
                     </li>
@@ -57,27 +57,27 @@
                 <div class="navbar__mobile-menu-items">
                     <ul class="navbar__mobile-menu-list">
                     <li class="navbar__mobile-menu-item">
-                        <a href="#" class="navbar__mobile-menu-link">Home</a>
+                        <a href="index.html" class="navbar__mobile-menu-link">Home</a>
                     </li>
                     <li class="navbar__mobile-menu-item">
-                        <a href="#features" class="navbar__mobile-menu-link">Features</a>
+                        <a href="index.html#features" class="navbar__mobile-menu-link">Features</a>
                     </li>
                     <li class="navbar__mobile-menu-item">
-                        <a href="#preview" class="navbar__mobile-menu-link">Preview</a>
+                        <a href="index.html#preview" class="navbar__mobile-menu-link">Preview</a>
                     </li>
                     <li class="navbar__mobile-menu-item">
-                        <a href="#details" class="navbar__mobile-menu-link">Details</a>
+                        <a href="index.html#details" class="navbar__mobile-menu-link">Details</a>
                     </li>
                     <li class="navbar__mobile-menu-item">
-                        <a href="#download" class="navbar__mobile-menu-link">Download</a>
+                        <a href="index.html#download" class="navbar__mobile-menu-link">Download</a>
                     </li>
                     <li class="navbar__mobile-menu-item">
-                        <a href="#" class="navbar__mobile-menu-link--primary">
+                        <a href="index.html" class="navbar__mobile-menu-link--primary">
                             <i class="fa-brands fa-facebook"></i>
                         </a>
                     </li>
                     <li class="navbar__mobile-menu-item">
-                        <a href="#" class="navbar__mobile-menu-link--primary">
+                        <a href="index.html" class="navbar__mobile-menu-link--primary">
                             <i class="fa-brands fa-twitter"></i>
                         </a>
                     </li>
@@ -272,7 +272,7 @@
     </section>
 
     <!-- Footer -->
-    <footer class="footer">
+    <footer class="footer">index.html
         <div class="footer__container container">
             <div class="footer__about">
                 <h4 class="footer__title">About Leno</h4>
@@ -285,27 +285,27 @@
                 <h4 class="footer_title">Quick Links</h4>
                 <ul class="footer__links-list">
                     <li class="footer__links-item">
-                        <a href="#" class="footer__links-link">
+                        <a href="index.html" class="footer__links-link">
                             Home
                         </a>
                     </li>
                     <li class="footer__links-item">
-                        <a href="#testimonials" class="footer__links-link">
+                        <a href="index.html#testimonials" class="footer__links-link">
                             Testimonials
                         </a>
                     </li>
                     <li class="footer__links-item">
-                        <a href="#features" class="footer__links-link">
+                        <a href="index.html#features" class="footer__links-link">
                             Features
                         </a>
                     </li>
                     <li class="footer__links-item">
-                        <a href="#preview" class="footer__links-link">
+                        <a href="index.html#preview" class="footer__links-link">
                             Preview
                         </a>
                     </li>
                     <li class="footer__links-item">
-                        <a href="#details" class="footer__links-link">
+                        <a href="index.html#details" class="footer__links-link">
                             Download
                         </a>
                     </li>
